--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Landing Page</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -41,10 +41,9 @@
     </div>
   </section>
 
-  <footer>
+  <footer id="contact">
     <p>© 2025 MyBrand. All rights reserved.</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
-
-
